Adding icon, gitignore, tweaks

--- a/apps/accounts/templates/accounts/edit_profile.html
+++ b/apps/accounts/templates/accounts/edit_profile.html
@@ -15,7 +15,7 @@
         <form class="form-signin" method="POST">
             {% csrf_token %}
             {% bootstrap_form form %}
-            <button class="btn btn-lg btn-succesa btn-block text-uppercase">Save</button>
+            <button class="btn btn-lg btn-success btn-block text-uppercase">Save</button>
         </form>
     </div>
 </div>
