Lots more development

--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -49,6 +49,17 @@
 {% endblock main %}
 
 
+
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">
+                &copy; {% now "Y" %}
+                <a target="_blank" class="text-muted" href="https://kickstartcoding.com/">Kickstart Coding LLC</a>
+                |
+                <a target="_blank" class="text-muted" href="http://github.com/kickstartcoding/thebookclub/">Learn from this codebase on GitHub</a>
+            </span>
+        </div>
+    </footer>
   </body>
 </html>
 
