--- a/apps/core/templates/snippets/hero.html
+++ b/apps/core/templates/snippets/hero.html
@@ -16,6 +16,11 @@
             <a class="btn btn-lg btn-secondary" href="{% url 'signup' %}">Sign-up to get book clubbing!</a>
             <a class="btn btn-link text-light" href="{% url 'login' %}">Already have an account? Log in now.</a>
         </p>
+        <p>
+            <a class="btn btn-outline-secondary mr-5" href="/">What's trending</a>
+            <a class="btn btn-outline-secondary mr-5" href="/?sort_by=new">What's new</a>
+            <a class="btn btn-outline-secondary mr-5" href="/?sort_by=votes">Top lists</a>
+        </p>
     </div>
 </div>
 
