--- a/apps/accounts/templates/accounts/profile_page.html
+++ b/apps/accounts/templates/accounts/profile_page.html
@@ -9,12 +9,12 @@
     <div class="col-md-3">
         <img src="{{ user.gravatar }}" />
 
-        <h3>@{{ user.username }}</h3>
+        <h3>{{ user.username }}</h3>
         <p><strong>{{ user.first_name }} {{ user.last_name }}</strong></p>
         <p>{{ user.bio }}</p>
 
         {% if is_viewing_self %}
-            <a href="{% url "edit_profile" %}">Edit</a>
+            <a class="btn btn-outline-primary" href="{% url "edit_profile" %}">Edit</a>
         {% endif %}
     </div>
 
@@ -26,7 +26,7 @@
                 <!-- This shows the "name" of the Reading List as a link to the full
                     details of that list -->
                 <div class="media-body ml-3 mt-1 mb-1 position-relative">
-                    <h5><a href="/list/{{ rl.id }}/" class="stretched-link">{{ rl.name }} <span class="badge badge-primary ml-2">{{ rl.topic }}</span></a></h5>
+                    <h5><a href="/list/{{ rl.id }}/" class="stretched-link">{{ rl }} <span class="badge badge-primary ml-2">{{ rl.category }}</span></a></h5>
                 </div>
 
                 <!-- This shows the creation date of the list -->
