--- a/apps/core/static/css/custom.css
+++ b/apps/core/static/css/custom.css
@@ -1,4 +1,27 @@
-/* Custom CSS goes here */
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 150px; /* Margin bottom by footer height */
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+  /* Add a slight gradient shadow */
+  box-shadow: inset 0 5px 10px 0 rgba(0, 0, 0, 0.05);
+}
+
+
+/* Other custom CSS goes here */
 .card-user {
     max-width: 80px;
 }
