--- a/apps/core/templates/pages/form_page.html
+++ b/apps/core/templates/pages/form_page.html
@@ -2,12 +2,15 @@
 {% load bootstrap4 %}
 
 {% block title %}
-    Book Club - Edit
+    {{ form_title }} - Edit - Book Club
 {% endblock title %}
 
 {% block content %}
-<div class="card border rounded">
+
+
+<div class="card border rounded shadow-lg">
     <div class="card-body">
+        <h1>{{ form_title }}</h1>
         <form method="POST">
             {% csrf_token %}
             {% bootstrap_form form %}
