--- a/apps/core/templates/snippets/navbar.html
+++ b/apps/core/templates/snippets/navbar.html
@@ -13,6 +13,15 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a href="/" class="nav-link">Trending</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/?sort_by=new" class="nav-link">New</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/?sort_by=new" class="nav-link">Top</a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
 
